Fixed counter label spacing

--- a/src/components/counter.sass
+++ b/src/components/counter.sass
@@ -13,3 +13,4 @@
     font-weight: 700
   .label
     font-size: 1rem
+    padding-block-end: .5rem
